Remove all references to the tests in conda packages
These were triggering the vulnerability scans - e.g

```
root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py27-osx-no-binary/lib/python2.7/site-packages/requests-2.19.1-py2.7.egg-info/PKG-INFO
root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Django-2.1.dist-info/METADATA
root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Scrapy-1.5.1.dist-info/METADATA
```

Testing done:
- Before this change

```
$ find /root/miniconda-*/pkgs -wholename \*info/test\* -type d
...
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/pep345
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo/noarch
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo/osx-64
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo/win-64
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo/linux-64
...
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/conda_format_repo/win-32
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/conda_env/specs
/root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/core
/root/miniconda-4.12.0/pkgs/libffi-3.4.2-h7f98852_5/info/test
/root/miniconda-4.12.0/pkgs/pandas-1.1.0-py37h3340039_0/info/test
/root/miniconda-4.12.0/pkgs/ld_impl_linux-64-2.36.1-hea4e1c9_2/info/test
/root/miniconda-4.12.0/pkgs/idna-3.3-pyhd3eb1b0_0/info/test
/root/miniconda-4.12.0/pkgs/libgfortran5-12.1.0-hdcd56e2_16/info/test
/root/miniconda-4.12.0/pkgs/ncurses-6.3-h27087fc_1/info/test
/root/miniconda

--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -22,6 +22,14 @@ COPY bin ./bin
 COPY *.ipynb .
 COPY *.py .
 
+# Delete all test packages since they generate false positives in the vulnerability scan
+# e.g.
+# root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py27-osx-no-binary/lib/python2.7/site-packages/requests-2.19.1-py2.7.egg-info/PKG-INFO
+# root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Django-2.1.dist-info/METADATA
+# root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Scrapy-1.5.1.dist-info/METADATA
+
+RUN /bin/bash -c "find /root/miniconda-*/pkgs -wholename \*info/test\* -type d | xargs rm -rf"
+
 WORKDIR /usr/src/app
 
 ADD docker/start_notebook.sh /usr/src/app/start_notebook.sh
