Upgrade node version, resolve vulnerabilities and unify dev and prod installs
- Upgrade node version to v19
- Resolve all vulnerabilities reported by an image scan
- Unify dev and prod installs - we now use the same node container and npm
  install for both dev and prod

We have not yet done the final step of having the prod image build off the dev
using FROM; I wasn't sure how that would work with EXPOSE and RUN

Testing done:
- Started dev docker-compose, http://localhost:3274 works
- Started prod docker-compose, http://localhost:3274 works

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,15 @@
 version: "3"
 services:
   dashboard:
-    image: danjellz/http-server:1.4
+    image: em-pub-dash-dev/frontend
+    build:
+        context: frontend
+        dockerfile: docker/Dockerfile.dev
     depends_on:
       - db
     ports:
       # DASH in numbers
-      - "3274:8080"
+      - "3274:6060"
     volumes:
       - ./frontend:/public
       - ./plots:/public/plots
