Fixing vulnerabilities in Docker images
Critical vulnerability - busybox
- Fixed by upgrading system package to required version.

High vulnerability - semver
- Need to upgrade node npm package depedency.
- Working on this.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /public
 
 RUN npm i -g http-server
 
+RUN apk update && apk upgrade busybox
+
 COPY client /public/client
 COPY *.html /public/
 
