--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -5,5 +5,7 @@ WORKDIR /public
 
 RUN npm i -g http-server
 
+RUN apk update && apk upgrade busybox
+
 EXPOSE 6060
 CMD ["http-server", "-p", "6060"]
