Upgrading npm as well as dependencies
Initially tried to only update semver package which contained the vulnerability.
But this gave an error:
npm ERR! code E404
npm ERR! 404 Not Found - GET https://registry.npmjs.org/@npmcli%2fdocs - Not found
npm ERR! 404
npm ERR! 404  '@npmcli/docs@^1.0.0' is not in this registry.

Hence, the next best approach I found was updating the base npm package itself which updates all dependencies within it too.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /public
 RUN npm i -g http-server
 
 RUN apk update && apk upgrade busybox
+RUN npm update -g
 
 COPY client /public/client
 COPY *.html /public/
