Cleaning urllib3 old versions
Found 2 additional vulnerabilities in Docker images:

- urllib3 - [FIXED] by removing stale versions; latest new fixed version was already present.
- libc6 - buffer overflow issue mentioned - however no remediation provided as yet.

--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -10,6 +10,10 @@ WORKDIR /usr/src/app
 RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
 RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
+COPY docker/clean_packages.sh /usr/src/app
+RUN chmod u+x /usr/src/app/clean_packages.sh
+RUN /bin/bash -c "./clean_packages.sh"
+
 ADD docker/start_notebook.sh /usr/src/app/.docker/start_notebook.sh
 RUN chmod u+x /usr/src/app/.docker/start_notebook.sh
 
