Fixing vulnerabilities in Docker images (#98)
* Fixing vulnerabilities in Docker images

Critical vulnerability - busybox
- Fixed by upgrading system package to required version.

High vulnerability - semver
- Need to upgrade node npm package depedency.
- Working on this.

* Upgrading npm as well as dependencies

Initially tried to only update semver package which contained the vulnerability.
But this gave an error:
npm ERR! code E404
npm ERR! 404 Not Found - GET https://registry.npmjs.org/@npmcli%2fdocs - Not found
npm ERR! 404
npm ERR! 404  '@npmcli/docs@^1.0.0' is not in this registry.

Hence, the next best approach I found was updating the base npm package itself which updates all dependencies within it too.

* Adding npm update command to Dockerfile.dev

This is the Dockerfile that docker_compose.dev.yml uses.
Earlier commit included changes in another Dockerfile not referenced by docker_compose.dev.yml but present in the frontend directory.

* Cleaning urllib3 old versions

Found 2 additional vulnerabilities in Docker images:

- urllib3 - [FIXED] by removing stale versions; latest new fixed version was already present.
- libc6 - buffer overflow issue mentioned - however no remediation provided as yet.

* Revert "Upgrading npm as well as dependencies"

This reverts commit d7f6e583ca7105411ac25efce820836f5b95c754.

* Revert "Adding npm update command to Dockerfile.dev"

This reverts commit 5252bec09981954e11cb912f3424d3a2d93cdd88.

* Revert "Cleaning urllib3 old versions"

This reverts commit c7936b9544db952f7274badc56165b37457996a9.

* Docker base node image upgraded.

Semver version upgrade required updating npm to latest version containing update semver package.

- Previous commit includes unversioned npm package upgraded.
- But node base image upgrade is recommended over generalized unversioned upgrade so as to have more control over installed package versions.

Found latest tested and analyzed base image [h

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
-FROM node:19-alpine
+FROM node:20.7.0-alpine
 VOLUME /public/plots
 
 RUN mkdir -p /public
 WORKDIR /public
 
 RUN npm i -g http-server
+
+RUN apk update && apk upgrade busybox
 
 COPY client /public/client
 COPY *.html /public/
