--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -1,9 +1,11 @@
-FROM node:19-alpine
+FROM node:20.7.0-alpine
 
 RUN mkdir -p /public
 WORKDIR /public
 
 RUN npm i -g http-server
+
+RUN apk update && apk upgrade busybox
 
 EXPOSE 6060
 CMD ["http-server", "-p", "6060"]
